--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.16.1
+  google_maps_flutter: ^0.5.26+4
+  geolocator: ^5.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
