--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dragscroll": "0.0.8"
+    "dragscroll": "0.0.8",
+    "express": "^4.17.1"
   }
 }
