--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "api.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "dependencies": {
     "dragscroll": "0.0.8",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "socket.io": "^2.3.0"
   }
 }
