--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   google_maps_flutter: ^0.5.26+4
   geolocator: ^5.3.1
   provider: ^4.1.2
+  uuid: ^2.0.4
+  http: ^0.12.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
