--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   uuid: ^2.0.4
   http: ^0.12.1
   lazy_indexed_stack: ^0.0.1
+  flutter_bloc: ^5.0.1
+  equatable: ^1.0.0
+  rxdart: ^0.23.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
