--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^1.8.2",
     "dragscroll": "0.0.8",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.0",
     "socket.io": "^2.3.0"
   }
 }
