--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_bloc: ^5.0.1
   equatable: ^1.0.0
   rxdart: ^0.23.1
+  webview_flutter: ^0.3.22+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
