--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   equatable: ^1.0.0
   rxdart: ^0.23.1
   webview_flutter: ^0.3.22+1
+  connectivity: ^0.4.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -71,6 +72,7 @@ flutter:
     - assets/images/layers/
     - assets/images/map_markers/
     - assets/images/route/
+    - assets/images/schematic_maps/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
