--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   rxdart: ^0.23.1
   webview_flutter: ^0.3.22+1
   connectivity: ^0.4.9
+  #video_player: ^0.10.11+2
+  flutter_vlc_player: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
