--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/images/map_tools/
     - assets/images/cctv_details/
     - assets/images/rest_area_details/
+    - assets/images/police_station_details/
     - assets/images/layers/
     - assets/images/map_markers/
     - assets/images/route/
