--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   connectivity: ^0.4.9
   #video_player: ^0.10.11+2
   flutter_vlc_player: ^3.0.3
+  rflutter_alert: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
