app: finish toll plaza bottom sheet web: ปรับสีเส้น schematic maps

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
     - assets/images/cctv_details/
     - assets/images/rest_area_details/
     - assets/images/police_station_details/
+    - assets/images/toll_plaza_details/
     - assets/images/layers/
     - assets/images/map_markers/
     - assets/images/route/
