--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   #video_player: ^0.10.11+2
   flutter_vlc_player: ^3.0.3
   rflutter_alert: ^1.0.3
+  store_redirect: ^1.0.2
+  carousel_slider: ^2.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
