--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,8 +43,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "th.co.exat.android.exattraffic"
+        applicationId "isymphonyz.exat"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -81,4 +80,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    // for FCM (handle background messages)
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
 }
+
+// for FCM
+apply plugin: 'com.google.gms.google-services'
