--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   #video_player: ^0.10.11+2
   flutter_vlc_player: ^3.0.3
   rflutter_alert: ^1.0.3
+  #flutter_socket_io: ^0.6.0
+  #socket_io_client: ^0.9.11
+  #adhara_socket_io: ^0.4.2+1
+  firebase_messaging: ^6.0.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
