--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   #socket_io_client: ^0.9.11
   #adhara_socket_io: ^0.4.2+1
   firebase_messaging: ^6.0.16
+  flutter_cache_manager: ^1.4.1
+
+  # Map markers clustering
+  fluster: ^1.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
