--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -15,6 +15,7 @@
     "dragscroll": "0.0.8",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.0",
     "socket.io": "^2.3.0"
   }
