--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,9 @@ dependencies:
   rflutter_alert: ^1.0.3
   store_redirect: ^1.0.2
   carousel_slider: ^2.2.1
-  #flutter_socket_io: ^0.6.0
-  #socket_io_client: ^0.9.11
-  #adhara_socket_io: ^0.4.2+1
   firebase_messaging: ^6.0.16
   flutter_cache_manager: ^1.4.1
+  pull_to_refresh: ^1.6.0
 
   # Map markers clustering
   fluster: ^1.1.2
