--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_messaging: ^6.0.16
   flutter_cache_manager: ^1.4.1
   pull_to_refresh: ^1.6.0
+  cached_network_image: ^2.2.0+1
 
   # Map markers clustering
   fluster: ^1.1.2
