--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: EXAT Traffic
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 4.0.3+31
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -41,6 +41,7 @@ dependencies:
   flutter_cache_manager: ^1.4.1
   pull_to_refresh: ^1.6.0
   cached_network_image: ^2.2.0+1
+  package_info: ^0.4.1
 
   # Map markers clustering
   fluster: ^1.1.2
