เพิ่มการแสดงรายละเอียดด่านในหน้า route เมื่อกด marker ด่า่น

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
     - assets/images/map_markers/
     - assets/images/route/
     - assets/images/schematic_maps/
+    - assets/images/splash/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
