--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   pull_to_refresh: ^1.6.0
   cached_network_image: ^2.2.0+1
   package_info: ^0.4.1
+  sqflite: ^1.3.1
+  shared_preferences: ^0.5.10
 
   # Map markers clustering
   fluster: ^1.1.2
