--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   package_info: ^0.4.1
   sqflite: ^1.3.1
   shared_preferences: ^0.5.10
+  url_launcher: ^5.5.0
 
   # Map markers clustering
   fluster: ^1.1.2
@@ -91,6 +92,7 @@ flutter:
     - assets/images/route/
     - assets/images/schematic_maps/
     - assets/images/splash/
+    - assets/images/emergency/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
