--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   sqflite: ^1.3.1
   shared_preferences: ^0.5.10
   url_launcher: ^5.5.0
+  fluttertoast: ^7.0.2
 
   # Map markers clustering
   fluster: ^1.1.2
