--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=exat-traffic
-keyPassword=exat-traffic
-keyAlias=key
-storeFile=~/home/promlert/Projects/2fellows/EXAT-Traffic/exat-traffic.keystore
+storePassword=123456
+keyPassword=123456
+keyAlias=upload
+storeFile=keystore.jks
