--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^0.5.10
   url_launcher: ^5.5.0
   fluttertoast: ^7.0.2
+  flutter_phoenix: "^0.1.0" # restart app
 
   # Map markers clustering
   fluster: ^1.1.2
