--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^5.5.0
   fluttertoast: ^7.0.2
   flutter_phoenix: "^0.1.0" # restart app
+  enum_to_string: ^1.0.9
 
   # Map markers clustering
   fluster: ^1.1.2
