--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fluttertoast: ^7.0.2
   flutter_phoenix: "^0.1.0" # restart app
   enum_to_string: ^1.0.9
+  google_maps_cluster_manager: ^0.1.0
 
   # Map markers clustering
   fluster: ^1.1.2
